[metadata]
description-file=README.md
license_files=LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[pytype]
inputs = sinergym
python_version = 3.12